--- a/Mogakko/Mogakko/Application/Info.plist
+++ b/Mogakko/Mogakko/Application/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>현위치를 기반으로 주변의 가까운 새싹 친구를 찾기 위해 위치정보에 대한 권한이 필요합니다</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
